tests/NormalTests/paczka1/fuzzy1/36622172.err
Error in line 1: 24QEvVjIWLy S599 68,2
Error in line 9: A998 A268 19,9
Error in line 15: e62OxJ S384 88,0
Error in line 22: aCMTto9ZeC S384 68,2
Error in line 33: 02aL S384 79,2
